--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,15 +40,15 @@ dependencies:
   cloud_firestore: ^5.0.1
   firebase_storage: ^12.1.0
   firebase_messaging: ^15.0.1
-  jiffy: ^6.3.1
+  jiffy: ^6.2.1
   http: ^1.2.1
   connectivity_plus: ^6.0.3
   provider: ^6.1.2
   scrollable_positioned_list: ^0.3.8
   scrollable_positioned_list_extended: ^0.3.9
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^1.1.5 #^2.0.10+1
   google_fonts: ^6.2.1
-  intl: ^0.19.0 # format time
+  intl: ^0.18.1 # format time
   get: ^4.6.6 #design pattent
   get_storage: ^2.1.1
   flutter_local_notifications: ^17.1.2 #push notifications
@@ -58,6 +58,11 @@ dependencies:
   font_awesome_flutter: ^10.7.0 #icon
   image_picker: ^1.1.2 #upload image
   loading_animation_widget: ^1.2.1 #loading
+  fluentui_system_icons: ^1.1.246 #icon -- remove
+  iconify_flutter: ^0.0.5 #icon
+  flutter_localization: ^0.2.0 # ngôn ngữ
+  skeletonizer: ^1.3.0 #skeleton
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
