--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   iconify_flutter: ^0.0.5 #icon
   flutter_localization: ^0.2.0 # ngôn ngữ
   skeletonizer: ^1.3.0 #skeleton
+  cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
