--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   skeletonizer: ^1.3.0 #skeleton
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
